--- a/src/RecipeDetail/RecipeDetail.css
+++ b/src/RecipeDetail/RecipeDetail.css
@@ -8,6 +8,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
+  gap: 2rem;
   }
 .recipe_detail {
   position: relative;
