--- a/src/RecipeList/RecipeList.css
+++ b/src/RecipeList/RecipeList.css
@@ -1,5 +1,5 @@
 .no_data{
-  padding:5rem 5rem;
+  padding:15rem 5rem;
   font-size: 2rem;
   color: #f48982;
 }
@@ -11,7 +11,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  gap:2rem
+  gap: 2rem;
 }
 .search__results {
   padding: 3rem 0;
